fixes overflow

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     font-family: "Figtree", sans-serif;
     list-style: none;
     text-decoration: none;
-    overflow: hidden;
+   
     
 }
 
@@ -36,7 +36,7 @@ body{
     height: 500px;
     border-radius: 10px;
     padding: 20px;
-  overflow: visible;
+    
  
 }
 .visible{
